--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'animate.css';
+
+:root {
+  --animate-duration: 800ms;
+  --animate-delay: 0.9s;
+}
